# windeurope72hours-elevations-client-python

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yaml  release.yml
elevations_client/: client.py
tests/: test_client.py
